--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
+    "axios": "^1.6.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
     "swr": "^2.2.4"
   },
   "devDependencies": {
