--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
+    "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
     "next": "14.0.0",
     "react": "^18",
@@ -27,7 +28,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.6",
-    "@types/node": "^20",
+    "@types/node": "^20.9.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
@@ -46,8 +47,14 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.0.3",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
-    "typescript": "^5"
-  }
+    "typescript": "^5.2.2"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
