--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
+    "jotai": "^2.5.1",
     "next": "14.0.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
